--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tinashe Mhike | WDD 130</title>
+    <meta name="description" content="Tinashe Mhike profile">
+    <meta name="author" content="Tinashe Mhike">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -24,6 +26,13 @@
             development—particularly web design. The idea of creating a website from scratch really excites me, and I am
             looking forward to learning and growing through this course.</p>
     </main>
+    <aside>
+        <h2>Benoni</h2>
+        <img src="Images/benoni.jpg" alt="Benoni Town">
+        <p>Benoni is a town in the East Rand region of Gauteng, South Africa, and part of the Ekurhuleni
+            Metropolitan Municipality. It's known for its suburban character, tree-lined streets, and beautiful
+            lakes, and acts as a service hub for other towns in the area.</p>
+    </aside>
     <footer>
         <p> ©️ 2025 🌴 Tinashe Mhike🌴 Benoni, South Africa</p>
     </footer>
