--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
             time. I currently work as a Financial Controller, but I have a strong interest in software design and
             development—particularly web design. The idea of creating a website from scratch really excites me, and I am
             looking forward to learning and growing through this course.</p>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/johannesburg-south-africa-temple?lang=eng">Johannesburg
+                    Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/logan-utah-temple?lang=eng">Utah Logan
+                    Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/durban-south-africa-temple?lang=eng">Durban
+                    Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/los-angeles-california-temple?lang=eng">Los
+                    Angeles Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Benoni</h2>
         <img src="Images/benoni.jpg" alt="Benoni Town">
         <p>Benoni is a town in the East Rand region of Gauteng, South Africa, and part of the Ekurhuleni
