--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/Homepage.jpg" alt="Homepage">
+            <img src="images/homepage.jpg" alt="Homepage">
             <h1>Rapid Rush Adventures </h1>
             <article>
                 <img src="images/happyclient.jpg" alt="happyclient">
