--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="White Water Rafting">
     <meta name="author" content="Tinashe Mhike">
-    <title>White Water Rafting</title>
+    <title>About Us | Rapid Rush Adventure</title>
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,10 +22,10 @@
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="trips.html">Trips</a>
-            <a href="contact.html">contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>
+    <main>  
         <div class="hero">
             <img src="images/homepage.jpg" alt="Homepage">
             <h1>Rapid Rush Adventures </h1>
@@ -37,31 +37,33 @@
                     exercitationem!</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, tempora beatae. Officiis,
                 laboriosam dignissimos excepturi hic dolores iste modi delectus fugit, maxime magnam odio ex
                 consequuntur consectetur nobis ipsum velit!</p>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting.jpg" alt="rafting">
-            <img src="images/rafting1.jpg" alt="rafting1">
-            <img src="images/rafting2.jpg" alt="rafting2">
-            <img src="images/rafting3.jpg" alt="rafting3">
-            <img src="images/rafting4.jpg" alt="rafting4">
+            <div class="gallery">
+                <img src="images/rafting.jpg" alt="rafting">
+                <img src="images/rafting1.jpg" alt="rafting1">
+                <img src="images/rafting2.jpg" alt="rafting2">
+                <img src="images/rafting3.jpg" alt="rafting3">
+                <img src="images/rafting4.jpg" alt="rafting4">
+            </div>
         </section>
     </main>
     <footer>
         <p>©️ 2025 | Rapid Rush Adventures | Tinashe Mhike</p>
         <nav class="socialmedia">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com " target="_blank">
                 <img src="images/facebook.png" alt="Facebook">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target="_blank">
                 <img src="images/twitter.png" alt="Twitter">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram">
             </a>
         </nav>
