--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="White Water Rafting">
+    <meta name="description" content="Rapid Rush Adventures">
     <meta name="author" content="Tinashe Mhike">
-    <title>About Us | Rapid Rush Adventure</title>
+    <title>Rapid Rush Adventure | WDD 130</title>
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>  
+    <main>
         <div class="hero">
             <img src="images/homepage.jpg" alt="Homepage">
             <h1>Rapid Rush Adventures </h1>
