--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rapid Rush Adventures">
     <meta name="author" content="Tinashe Mhike">
-    <title>Rapid Rush Adventure | WDD 130</title>
+    <title>About Us | Rapid Rush Adventures</title>
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
