--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    <header>
-        <img src="images/Logo.jpeg" alt="Rafting Logo">
+    <header class="header">
+        <img src="images/Logo.jpeg" alt="Rafting Logo" class="Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -39,18 +39,45 @@
         </div>
         <section class="history">
             <h2>History</h2>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, tempora beatae. Officiis,
-                laboriosam dignissimos excepturi hic dolores iste modi delectus fugit, maxime magnam odio ex
-                consequuntur consectetur nobis ipsum velit!</p>
+            <div class="history-content">
+                <div class="left-text">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, quo sequi, id, quae eius
+                        similique velit distinctio dolores quisquam voluptates nobis! Repudiandae enim officiis culpa.
+                        Iusto vitae tempora culpa assumenda.</p>
+                </div>
+                <div class="centre-image">
+                    <img src="images/history.jpg" alt="history image">
+                </div>
+                <div class="right-text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ut voluptates aperiam distinctio,
+                        placeat voluptatum aliquam suscipit natus quibusdam id adipisci excepturi harum iusto
+                        perspiciatis nostrum debitis odit fugit vitae.</p>
+                </div>
+            </div>
         </section>
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
             <div class="gallery">
-                <img src="images/rafting.jpg" alt="rafting">
-                <img src="images/rafting1.jpg" alt="rafting1">
-                <img src="images/rafting2.jpg" alt="rafting2">
-                <img src="images/rafting3.jpg" alt="rafting3">
-                <img src="images/rafting4.jpg" alt="rafting4">
+                <figure>
+                    <img src="images/rafting.jpg" alt="rafting">
+                    <figcaption>Rafting</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting1.jpg" alt="rafting1">
+                    <figcaption>Rafting1</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting2.jpg" alt="rafting2">
+                    <figcaption>Rafting2</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting3.jpg" alt="rafting3">
+                    <figcaption>Rafting3</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/rafting4.jpg" alt="rafting4">
+                    <figcaption>Rafting4</figcaption>
+                </figure>
             </div>
         </section>
     </main>
