--- a/wwr/about.html
+++ b/wwr/about.html
@@ -42,14 +42,16 @@
             <div class="history-content">
                 <div class="left-text">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa, quo sequi, id, quae eius
-                        similique velit distinctio dolores quisquam voluptates nobis! Repudiandae enim officiis culpa.
+                        similique velit distinctio dolores quisquam voluptates nobis! Repudiandae enim officiis
+                        culpa.
                         Iusto vitae tempora culpa assumenda.</p>
                 </div>
                 <div class="centre-image">
                     <img src="images/history.jpg" alt="history image">
                 </div>
                 <div class="right-text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ut voluptates aperiam distinctio,
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ut voluptates aperiam
+                        distinctio,
                         placeat voluptatum aliquam suscipit natus quibusdam id adipisci excepturi harum iusto
                         perspiciatis nostrum debitis odit fugit vitae.</p>
                 </div>
@@ -59,24 +61,24 @@
             <h2>Adventure Awaits You!</h2>
             <div class="gallery">
                 <figure>
-                    <img src="images/rafting.jpg" alt="rafting">
-                    <figcaption>Rafting</figcaption>
+                    <img src="images/rafting.jpg" alt="Rapid Rush Crew">
+                    <figcaption>Rapid Rush Crew</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/rafting1.jpg" alt="rafting1">
-                    <figcaption>Rafting1</figcaption>
+                    <img src="images/rafting1.jpg" alt="Whitewater Thrill">
+                    <figcaption>Whitewater Thrill</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/rafting2.jpg" alt="rafting2">
-                    <figcaption>Rafting2</figcaption>
+                    <img src="images/rafting2.jpg" alt="Teamwork in Action">
+                    <figcaption>Teamwork Action</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/rafting3.jpg" alt="rafting3">
-                    <figcaption>Rafting3</figcaption>
+                    <img src="images/rafting3.jpg" alt="River Escape">
+                    <figcaption>River Escape</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/rafting4.jpg" alt="rafting4">
-                    <figcaption>Rafting4</figcaption>
+                    <img src="images/rafting4.jpg" alt="The Final Splash">
+                    <figcaption>The Final Splash</figcaption>
                 </figure>
             </div>
         </section>
