--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -23,7 +23,7 @@
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
-                <label for="browser"> What is your favourite internet browser</label>
+                <label for="browser"> What is your favorite internet browser</label>
                 <select id="browser" name="browser">
                     <option value="chrome">Chrome</option>
                     <option value="firefox">Firefox</option>
