--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -27,6 +27,7 @@
     </header>
 
     <main>
+
         <h2>Contact Us</h2>
         <p>We'd love to hear from you! Feel free to reach out using the information below</p>
 
@@ -50,13 +51,13 @@
         <h2 class="center-heading">Meet Our Happy Team</h2>
         <div class="team-container">
             <div class="employee-card">
-                <img src="images/Customer Experience Manager.jpg" alt="Sarah Moyo">
+                <img src="images/customerexperiencemanager.jpg" alt="Sarah Moyo">
                 <div class="caption">
                     Sarah Moyo<br><small>Customer Experience Manager</small>
                 </div>
             </div>
             <div class="employee-card">
-                <img src="images/operations manager.jpg" alt="James Smith">
+                <img src="images/operationsmanager.jpg" alt="James Smith">
                 <div class="caption">
                     James Smith<br><small>Operations Supervisor</small>
                 </div>
